2000-01-05  OKUJI Yoshinori  <okuji@gnu.org>

	* grub/asmstub.c: Include the header shared.h after including
	all the system headers, but not before.
	(EXTENDED_MEMSIZE): Reduced to 3MB.
	(grub_setjmp): New function.
	(grub_longjmp): Likewise.
	* grub/main.c: Include setjmp.h.
	* stage2/asm.S (grub_setjmp): New function. Stolen from the
	OSKit (which stole it from Mach).
	(grub_longjmp): Likewise.
	* stage2/shared.h [GRUB_UTIL] (grub_jmp_buf): New type.
	[!GRUB_UTIL] (grub_jmp_buf): New macro. Defined as jmp_buf.
	(grub_setjmp): Declared.
	(grub_longjmp): Likewise.
	(restart_env): Likewise.
	* stage2/builtins.c (configfile_func): Use grub_longjmp instead
	of invoking cmain again.
	* stage2/stage2.c (restart_env): New variable.
	(cmain): Call grub_setjmp first to initialize RESTART_ENV.
	
2000-01-03  OKUJI Yoshinori  <okuji@gnu.org>

	* docs/multiboot.texi (Boot information format): Added the
	descriptions about the fields "config_table" and
	"boot_loader_name".
	
1999-12-31  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/builtins.c (setup_func) [!NO_BUGGY_BIOS_IN_THE_WORLD]:
	Specify the option `d', whether INSTALL_DRIVE is identical with
	IMAGE_DRIVE or not.
	* docs/user-ref.texi (Command-line-specific commands): Added a
	caution about buggy BIOSes which don't pass a booting drive
	properly.

	* docs/src2texi: Added an extra space into the first line, for
	the portability issue.

	* docs/appendices.texi (Obtaining and Building GRUB): Update the
	information on the ftp site and the CVS repository.
	
1999-12-30  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/builtins.c (blocklist_func): New function.
	(builtin_blocklist): New variable.
	(builtin_table): Added a pointer to BUILTIN_BLOCKLIST.
	* docs/user-ref.texi (Command-line-specific commands): Added a
	description about the command "blocklist".
	
1999-12-30  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/disk_io.c (grub_seek): New function.
	* stage2/shared.h (grub_seek): Declared.